<?xml version="1.0"?>
<package format="2">
  <name>bezier_smoothing</name>
  <version>0.0.0</version>
  <description>The bezier_smoothing package</description>

  <maintainer email="SudiroEEN@gmail.com">Sudiro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
